@@ -9,7 +9,7 @@
  * @subpackage processors.element.tv.renders
  */
 if (!$modx->hasPermission('view_tv')) return $modx->error->failure($modx->lexicon('permission_denied'));
-$modx->lexicon->load('tv_widget');
+$modx->lexicon->load('tv_widget','tv_input_types');
 
 $context = (isset($scriptProperties['context']) && !empty($scriptProperties['context'])) ? $scriptProperties['context'] : $modx->context->get('key');
 
